--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <!--[if gt IE 8]> <html> <![endif]-->
 <!--[if !IE]><!--><html lang="en"><!-- <![endif]-->
 <head>
-	<title>Happy Birthday Suchi</title>
+	<title>Happy Birthday Pritam</title>
 	<meta charset="UTF-8" />
-	<meta name="description" content="Happy Birthday Suchi">
+	<meta name="description" content="Happy Birthday Pritam">
     <meta name="keywords" content="Birthday, Happy">
     <!-- Strat of Facebook Meta -->
     <meta property="og:type" content="E-Greeting" />
@@ -34,22 +34,22 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;"></h2>
+    	<h2 style="color:#F2B300;">P</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">S</h2>
+    	<h2 style="color:#0719D4;">R</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">U</h2>
+    	<h2 style="color:#D14D39;">I</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">C</h2>
+    	<h2 style="color:#8FAD00;">T</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">H</h2>
+    	<h2 style="color:#8377E4;">A</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">I</h2>
+    	<h2 style="color:#99C96A;">M</h2>
     </div>
     <div class="balloons text-center" id="b7">
     	<h2 style="color:#20CFB4;"></h2>
@@ -151,7 +151,7 @@
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Suchi</p>
+				<p>a very happy birthday Pritam aka Bhalu</p>
 				<p>and yes of course Happy new year</p>
 			</div>
 		</div>
